--- a/components/camel-velocity/src/test/resources/org/apache/camel/component/velocity/AppleTemplate.vm
+++ b/components/camel-velocity/src/test/resources/org/apache/camel/component/velocity/AppleTemplate.vm
@@ -14,4 +14,4 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ------------------------------------------------------------------------
-$in.setHeader('fruit', 'apple')I am an $body
+$in.setHeader("fruit", "apple")I am an $body
