CAMEL-8368: Adding new scheduler component

--- a/camel-core/src/main/java/org/apache/camel/component/scheduler/package.html
+++ b/camel-core/src/main/java/org/apache/camel/component/scheduler/package.html
@@ -19,8 +19,7 @@
 </head>
 <body>
 
-The <a href="http://camel.apache.org/timer.html">Timer Component</a> provides a
-simple timer
+The <a href="http://camel.apache.org/scheduler.html">Scheduler Component</a> to schedule routes
 
 </body>
 </html>
