--- a/dsl/camel-jbang/camel-jbang-core/src/main/resources/templates/Dockerfile21.tmpl
+++ b/dsl/camel-jbang/camel-jbang-core/src/main/resources/templates/Dockerfile21.tmpl
@@ -43,8 +43,7 @@
 # This scripts computes the command line to execute your Java application, and
 # includes memory/GC tuning.
 # You can configure the behavior using the following environment properties:
-# - JAVA_OPTS: JVM options passed to the `java` command (example: "-verbose:class") - Be aware that this will override
-# the default JVM options, use `JAVA_OPTS_APPEND` to append options
+# - JAVA_OPTS: JVM options passed to the `java` command (example: "-verbose:class")
 # - JAVA_OPTS_APPEND: User specified Java options to be appended to generated options
 #   in JAVA_OPTS (example: "-Dsome.property=foo")
 # - JAVA_MAX_MEM_RATIO: Is used when no `-Xmx` option is given in JAVA_OPTS. This is
@@ -97,19 +96,14 @@
 ###
 FROM registry.access.redhat.com/ubi9/openjdk-21:1.21
 
-ENV LANGUAGE='en_US:en'
+COPY --chown=185 target/{{ .AppJar }} /deployments/
 
-
-# We make four distinct layers so if there are application changes the library layers can be re-used
-COPY --chown=185 target/quarkus-app/lib/ /deployments/lib/
-COPY --chown=185 target/quarkus-app/*.jar /deployments/
-COPY --chown=185 target/quarkus-app/app/ /deployments/app/
-COPY --chown=185 target/quarkus-app/quarkus/ /deployments/quarkus/
-
-EXPOSE 8080
+# Uncomment to expose any given port
+# EXPOSE 8080
 USER 185
-ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
-ENV JAVA_APP_JAR="/deployments/quarkus-run.jar"
+# Uncomment to provide any Java option
+# ENV JAVA_OPTS=""
+ENV JAVA_APP_JAR="/deployments/{{ .AppJar }}"
 
 ENTRYPOINT [ "/opt/jboss/container/java/run/run-java.sh" ]
 
