CAMEL-22354: dataformats - Align all data formats getter setters to model

--- a/tooling/maven/camel-package-maven-plugin/src/main/resources/velocity/property-configurer.vm
+++ b/tooling/maven/camel-package-maven-plugin/src/main/resources/velocity/property-configurer.vm
@@ -18,6 +18,7 @@
 package ${package};
 
 import javax.annotation.processing.Generated;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 import org.apache.camel.CamelContext;
@@ -143,9 +144,9 @@ public class ${className} extends ${psn} implements GeneratedPropertyConfigurer,
         #if ( $model || !$hasSuper )
         return ALL_OPTIONS;
         #else
-        Map<String, Object> answer = super.getAllOptions(target);
+        Map<String, Object> answer = new LinkedHashMap<>(super.getAllOptions(target));
             #foreach ( $option in $options )
-        answer.put(${option.name}, ${mojo.canonicalClassName($option.type)});
+        answer.put("${option.name}", ${mojo.canonicalClassName($option.javaType)}.class);
             #end
         return answer;
         #end
