--- a/tooling/maven/camel-package-maven-plugin/src/main/resources/velocity/property-configurer.vm
+++ b/tooling/maven/camel-package-maven-plugin/src/main/resources/velocity/property-configurer.vm
@@ -18,7 +18,6 @@
 package ${package};
 
 import javax.annotation.processing.Generated;
-import java.util.LinkedHashMap;
 import java.util.Map;
 
 import org.apache.camel.CamelContext;
@@ -144,7 +143,7 @@ public class ${className} extends ${psn} implements GeneratedPropertyConfigurer,
         #if ( $model || !$hasSuper )
         return ALL_OPTIONS;
         #else
-        Map<String, Object> answer = new LinkedHashMap<>(super.getAllOptions(target));
+        Map<String, Object> answer = new java.util.LinkedHashMap<>(super.getAllOptions(target));
             #foreach ( $option in $options )
         answer.put("${option.name}", ${mojo.canonicalClassName($option.javaType)}.class);
             #end
